<resources>
    <string name="app_name">Идеи</string>
    <string name="button">Button</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="authorization">Авторизация</string>
    <string name="registration_btn">РЕГИСТРАЦИЯ</string>
    <string name="login_btn">ВОЙТИ</string>
    <string name="bad_login">Не коректный логин</string>
    <string name="bad_password">Не коректный пароль</string>
    <string name="please_wait">Пожалуйста подождите....</string>
    <string name="loading_data">Загрузка данных</string>
    <string name="google_play_unavailable">Сервесы Google не доступны</string>
    <string name="authorisation_Error">Ошибка авторазации</string>
    <string name="falien_connect">Ошибка соединенеия с сервером</string>
    <string name="registration">Регистрация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="camera">Камера</string>
    <string name="gallerea">Галерея</string>
    <string name="permission_not_given">Разрешение не дано</string>
    <string name="username_is_incorrect">Не коректный логин</string>
    <string name="password_is_incorrect">Не коректный пароль</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_your_password_a_second_time">Введите пароль второй раз</string>
    <string name="input_text_idea">Введите текст идеи</string>
    <string name="create">Создать</string>
    <string name="creat_new_idea">Создание новой идеи</string>
    <string name="idea_created_successfully">Идея успешно создана</string>
    <string name="error_occured">Ошибка</string>
    <string name="loading_ideas">Загрузка идей</string>
    <string name="like_in_progress">Ожидание лайка</string>
    <string name="dis_like_in_progress">Ожидание дизлайка</string>
    <string name="like_is">Лайк уже поставлен</string>
    <string name="dis_like_is">Дизлайк уже поставлен</string>
    <string name="not_like_dislike">Нету лайков и дизалайков</string>
    <string name="read_only">Вы можете только смотреть идеи</string>
    <string name="logout_out_account">Выход из учетной записи</string>
    <string name="change_password">Изменение пароля</string>
    <string name="uploading_profile_photo">Загрузка фото профиля</string>
    <string name="change_your_profile_photo">Измененеие фото профиля</string>
    <string name="password_change_successful">Пароль успешно изменен</string>
    <string name="incorrect_password">Неверный пароль!</string>
    <string name="input_old_password">Введите старый пароль</string>
    <string name="error_change_image">Ошибка изменения фото</string>
    <string name="set_img">Отправка изображения</string>
    <string name="link_to_internet_resource_for_idea">Сылка на интернет ресурс для идеи</string>
    <string name="incorrect_link">Не коректная ссылка</string>
    <string name="no_link">Нету ссылки</string>
    <string name="already_voted_for_this_idea">Уже проголосовали за эту идею</string>
    <string name="hater">hater</string>
    <string name="promoter">promoter</string>
    <string name="Idea_creation">Создание идеи</string>
    <string name="ideas">Идеи</string>
    <string name="likes_and_dislikes">Лайки и Дизлайки</string>
    <string name="settings">Настройки</string>


</resources>