<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/tollbar"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="260dp" />

    <TextView
        android:id="@+id/createNewPostLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/creat_new_idea"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contentTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createNewPostLabel">

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/attachPhotoImgSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/ic_image"
        app:layout_constraintBottom_toTopOf="@id/createIdeaBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <ImageView
        android:id="@+id/attachPhotoDoneImgSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="88dp"
        android:padding="8dp"
        android:src="@drawable/ic_done"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/createIdeaBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUrl" />

    <Button
        android:id="@+id/createIdeaBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="544dp"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attachPhotoImgSetting" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/contentEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/input_text_idea"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="250dp"
        android:maxLength="100"
        app:layout_constraintTop_toBottomOf="@+id/createNewPostLabel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/contentEdt"
        tools:layout_editor_absoluteX="221dp"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link_to_internet_resource_for_idea" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>